update about modal content

--- a/index.html
+++ b/index.html
@@ -928,46 +928,54 @@
     </script>
 
 <!-- ABOUT MODAL -->
-<div id="about-modal" class="modal hidden">
-  <div class="modal-content">
-    <button class="close" onclick="closeAbout()">×</button>
-    <h2>About LTStudioDesign</h2>
-    <p><strong>English</strong></p>
-    <p>
-      LTStudioDesign is an architectural lighting and visualization atelier founded in Buenos Aires in 2022.
-      We specialize in bespoke illumination and hyper-realistic visualizations for high-end residential and architectural projects around the world.
-    </p>
-    <p>
-      Our mission is to transform architecture through light — designing atmospheres that merge emotion, precision, and timeless elegance. Each project is crafted with a multidisciplinary approach that combines design sensitivity, photorealistic visualization, and technical excellence.
-    </p>
-    <p>
-      We collaborate with architects, developers, and private clients who value refinement, proportion, and the poetic presence of light within architecture.
-    </p>
-    <p>
-      <strong>Contact:</strong><br>
-      Email: <a href="mailto:ltstudiodesignbue@gmail.com">ltstudiodesignbue@gmail.com</a><br>
-      Phone: <a href="tel:+5493446590817">+54 9 3446 590817</a><br>
-      Instagram: <a href="https://www.instagram.com/ltstudiodesignbue" target="_blank">@ltstudiodesignbue</a>
-    </p>
-    <hr>
-    <p><strong>Español</strong></p>
-    <p>
-      LTStudioDesign es un estudio de diseño de iluminación y visualización arquitectónica fundado en Buenos Aires en 2022. Nos especializamos en crear iluminación a medida y visualizaciones hiperrealistas para proyectos residenciales y arquitectónicos de alta gama en todo el mundo.
-    </p>
-    <p>
-      Nuestra misión es transformar la arquitectura a través de la luz — diseñando atmósferas que combinan emoción, precisión y una elegancia atemporal. Cada proyecto se desarrolla con un enfoque multidisciplinario que une la sensibilidad del diseño, la visualización fotorrealista y la excelencia técnica.
-    </p>
-    <p>
-      Colaboramos con arquitectos, desarrolladores y clientes privados que valoran la sofisticación, la proporción y la poesía de la luz en la arquitectura.
-    </p>
-    <p>
-      <strong>Contacto:</strong><br>
-      Email: <a href="mailto:ltstudiodesignbue@gmail.com">ltstudiodesignbue@gmail.com</a><br>
-      Teléfono: <a href="tel:+5493446590817">+54 9 3446 590817</a><br>
-      Instagram: <a href="https://www.instagram.com/ltstudiodesignbue" target="_blank">@ltstudiodesignbue</a>
-    </p>
-  </div>
+<div id="about-modal" class="modal hidden"><div class="modal-inner">
+  <h2 class="modal-title">About LTStudioDesign</h2>
+
+  <p><strong>English</strong></p>
+  <p>
+    LTStudioDesign is an architectural lighting and visualization atelier founded in Buenos Aires in 2022.
+    We specialize in bespoke illumination and hyper-realistic visualizations for high-end residential and architectural projects worldwide.
+    Our work is aimed at architects, developers and private clients seeking a luxury, architecture-first lighting approach.
+  </p>
+  <p>
+    We design light as a material of architecture — merging emotion, precision and contemporary elegance.
+  </p>
+
+  <p><strong>Services</strong></p>
+  <ul>
+    <li>Luxury architectural lighting design</li>
+    <li>Photorealistic / hyper-realistic 3D visualization</li>
+    <li>Lighting concepts for villas, mansions and penthouses</li>
+    <li>Support for architects, developers and international clients</li>
+  </ul>
+
+  <hr>
+
+  <p><strong>Español</strong></p>
+  <p>
+    LTStudioDesign es un estudio de diseño de iluminación y visualización arquitectónica fundado en Buenos Aires en 2022.
+    Nos enfocamos en iluminación a medida y visualizaciones hiperrealistas para residencias y proyectos de arquitectura de alta gama en el exterior.
+  </p>
+  <p>
+    Diseñamos la luz como parte de la arquitectura: emoción, precisión y elegancia contemporánea.
+  </p>
+
+  <p><strong>Servicios</strong></p>
+  <ul>
+    <li>Diseño de iluminación arquitectónica de lujo</li>
+    <li>Visualización 3D fotorrealista / hiperrealista</li>
+    <li>Conceptos lumínicos para mansiones, villas y residencias premium</li>
+    <li>Acompañamiento a estudios de arquitectura y desarrolladores</li>
+  </ul>
+
+  <p>
+    Contact: <a href="mailto:ltstudiodesignbue@gmail.com">ltstudiodesignbue@gmail.com</a> ·
+    <a href="tel:+5493446590817">+54 9 3446 590817</a> ·
+    Instagram: <a href="https://www.instagram.com/ltstudiodesignbue" target="_blank">@ltstudiodesignbue</a>
+  </p>
+</div></div>
 </div>
 </body>
 </html>
+
 
