Add ltsd-modals and wire on home

--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
 
 
 <script>window.LTSD_MODALS_CONFIG=window.LTSD_MODALS_CONFIG||{aboutTitle:"Sobre LT Studio Design",aboutHtml:'<div class="ltsd-about"><p>Escribí tu ABOUT acá.</p><div class="ltsd-about__services"><strong>Servicios:</strong><br>• Diseño Arquitectónico<br>• Planificación Urbana<br>• Diseño de Interiores<br>• Consultoría en Sostenibilidad<br>• Gestión de Proyectos</div></div>'};</script>
-<script src=""assets/ltsd-modals/ltsd-modals.js""></script>
+<script src="assets/ltsd-modals/ltsd-modals.js"></script>
 </body>
 </html>
 
